Squashed commit of the following:
commit fa51b9faef406283983b8c0f0c8224f890be8a82
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 22:17:26 2022 -0500

    add locales and update pod libraries

commit 80649ae954151662c5caf0c4836efcdc423d20cb
Merge: 04106e3 fd046d8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 20:06:30 2022 -0500

    Merge branch 'develop' of github.com-jcaviedesc:rambit-co/blood-pressure-app into release/0.4.8

commit fd046d8644762fc41cd67b067bd6ffd786131a16
Merge: 8565f73 2aa7208
Author: juan camilo caviedes <jcamilocc97@gmail.com>
Date:   Mon Sep 26 20:03:54 2022 -0500

    Merge pull request #2 from rambit-co/feature-medicine

    Feature medicine

commit 2aa72082e468e758dae0f6c113be698e62af32bb
Merge: 64bcc4c 8565f73
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 20:03:33 2022 -0500

    Merge branch 'develop' of github.com-jcaviedesc:rambit-co/blood-pressure-app into feature-medicine

commit 04106e3145da889bab11861000a880be13c491cd
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 19:26:57 2022 -0500

    fix load result on blood pressure screen

commit f19605b92de8e62e5579c9a2836efd15655a03e9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 15:33:52 2022 -0500

    fixes on verifyphone screen

commit 69c88f5ad37d208622a10cda828e9bd22895f368
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon Sep 26 12:27:07 2022 -0500

    improve realmconfig

commit 64bcc4c93b503c05ad0e014bd71cb033caf7448f
Author: CloudTolosa <lauratolosa96@gmail.com>
Date:   Sun Sep 25 20:00:59 2022 -0500

    add translate definitions and errors in medicineform

commit 6147022e10b087272927e1bd17df18cf39820254
Author: CloudTolosa <lauratolosa96@gmail.com>
Date:   Sun Sep 25 19:59:17 2022 -0500

    add customslider in medicineForm and change style in dose value and unit

commit 3624d5f39856945d13ff4ca3415ea7dec0e0ae1e
Author: CloudTolosa <lauratolosa96@gmail.com>
Date:   Sun Sep 25 19:58:19 2022 -0500



--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,26 +49,42 @@
     "thrombosis": "¿Has tenido trombosis cerebral? (enfermedad cerebrovascular)",
     "nephropathy": "¿Tienes problemas renales? (enfermedad renal cronica)"
   },
+  "medicine_info_screen": {
+    "title": "Agregar Medicamento",
+    "medicine": "Nombre",
+    "type": "Tipo de presentación",
+    "dose": "Dosis",
+    "frecuency": "Frecuencia",
+    "period": "Periodo que debe tomar el medicamento",
+    "via": "Via de Administración",
+    "dateStart": "Fecha Inicio",
+    "dateEnd": "Fecha Fin",
+    "keep_medicine": "Guardar",
+    "not_found_medicine": "No tiene medicamentos registrados",
+    "pill": "Pildoras",
+    "solution": "Solución",
+    "injection": "Inyeccion",
+    "dust": "Polvo",
+    "drops": "Gotas",
+    "inhaler": "Inhalados",
+    "other": "Otra",
+    "times_per_day": "¿Con que frecuencia al dia lo/la toma?",
+    "days_interval": "Intervalo de dias",
+    "times_hours": "Hora de las tomas",
+    "once": "Vez",
+    "twice": "Veces"
+  },
   "skip_app_alert": {
     "title": "¡Espera!",
     "subtitle": "¿Seguro quieres salir de la applicación?",
     "cancel": "Cancelar",
     "ok": "Si"
   },
-  "wait1minute": {
-    "title": "Espera minimo 1 minuto y realiza una segunda medición",
-    "description": "todo para que se realizan dos mediciones?",
-    "remaining": "Espera",
-    "seconds": "Segundos"
-  },
-  "blood_pressure_finish": {
-    "title": "Resumen",
-    "description": "Aqui puedes agregar informacion extra como sintomas o cualquier factor que pueda afectar la medición de la presión arterial"
-  },
   "home": {
     "user_greetings": "Hola,",
     "mystatus": "Mi estado",
-    "medicines": "Medicamentos"
+    "medicines": "Medicamentos",
+    "show_medicines": "Ver mas"
   },
   "Home/BloodPressure": {
     "title": "Presión Arterial",
@@ -200,7 +216,7 @@
     "summary": "Resumen",
     "search": "Buscar"
   },
-  "measurements":{
+  "measurements": {
     "BloodPressure": "Presión Arterial",
     "Weight": "Peso Corporal",
     "Height": "Estatura"
@@ -283,6 +299,85 @@
   "sex": "Sexo",
   "men": "hombre",
   "women": "mujer",
+  "medicineDose": "Medicinas",
+  "dose": "Dosis",
+  "via": "Via de Administración",
+  "frecuency": "Frecuencia",
+  "hourDose": "Hora",
+  "pill": "Pildoras",
+  "solution": "Solución",
+  "injection": "Inyeccion",
+  "dust": "Polvo",
+  "drops": "Gotas",
+  "inhaler": "Inhalados",
+  "other": "Otra",
+  "every day": "Diario",
+  "specific days": "Dias Especificos",
+  "days interval": "Intervalo de dias",
+  "days medicine": "Dias de toma",
+  "only": "vez",
+  "twice": "veces",
+  "medicine success": "Medicamento Agregado",
+  "mon": "Lun",
+  "tue": "Mar",
+  "wed": "Mié",
+  "thu": "Jue",
+  "fri": "Vie",
+  "sat": "Sáb",
+  "sun": "Dom",
+  "errors": {
+    "name": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar un nombre."
+      }
+    },
+    "times_per_day": {
+      "number.base": ""
+    },
+    "frecuency": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar una frecuencia."
+      }
+    },
+    "apparience": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar una apariencia."
+      }
+    },
+    "value": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar un valor de dosis."
+      }
+    },
+    "unit": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar una unidad de dosis."
+      }
+    },
+    "via": {
+      "string": {
+        "base": "paso algo",
+        "empty": "Debes agregar una via de suministro."
+      }
+    },
+    "days": {
+      "array": {
+        "base": "paso algo",
+        "includesRequiredUnknowns": "Debes agregar dias de toma."
+      }
+    },
+    "every": {
+      "number": {
+        "base": "Debes agregar una intervalo de dias.",
+        "empty": "Debes agregar una intervalo de dias."
+      }
+    }
+  },
   "profile": {
     "title": "Perfil",
     "name": "Nombres",
@@ -293,7 +388,7 @@
     "F": "Femenino",
     "M": "Masculino"
   },
-  "onboarding":{
+  "onboarding": {
     "title_one": "Medición de la presión arterial",
     "subtitle_one": "Lleva el seguimiento de tu presión arterial y reduce el riesgo de tener complicaciones.",
     "title_2": "Autocuidado",
