Squashed commit of the following:
commit 5e3c53de3c45f02149b264288fdfe77bfaa05303
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Oct 9 00:38:15 2022 -0500

    fix(all): fix all bug on app

commit 5ad17394a9d52a2e07475ac511acc41af9377de3
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Oct 8 23:04:15 2022 -0500

    feat(selfCare): add darkmode to editor and improve handler of toolbar editor

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -193,7 +193,7 @@
       }
     ]
   },
-  "BloodPressure/Meassuring": {
+  "BloodPressure/Measuring": {
     "title": "Registro de Presión Arterial",
     "header_title": "Presión arterial",
     "date": "Fecha",
