--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -193,7 +193,7 @@
       }
     ]
   },
-  "BloodPressure/Meassuring": {
+  "BloodPressure/Measuring": {
     "title": "Registro de Presión Arterial",
     "header_title": "Presión arterial",
     "date": "Fecha",
