Squashed commit of the following:
commit 53d55e333a6844c4cdb12712789b324427169877
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Nov 24 07:44:33 2022 -0500

    ci(app-version): build app version 0.5.0

commit 5f8037b80eb92d283612796876dff0352cab1dd9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Nov 23 17:44:29 2022 -0500

    feat(monitoring): add search bar

commit 6cb5a9af92232799f8bb24ea7e6b36a9efb75fd9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Nov 23 15:43:15 2022 -0500

    feat(monitoring): add list of patients

commit 667455a6d47241ed598994793905998db79bc6a4
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed Nov 23 11:14:38 2022 -0500

    feat(notifications): add useForegroundEventNotifee hook

commit c3f61b38cf3f3b8b85b9da72d17656cee48329a8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Tue Nov 22 22:38:02 2022 -0500

    feat(clinical-monitoring): add button to request access to clinical activity

commit dbfc60c0d9ff668116d30641868a6ebdb5442924
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Nov 20 18:34:18 2022 -0500

    feat(clinical-monitoring): add clinical monitoring response to backgroundEvent

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,8 +213,9 @@
     }
   },
   "Tabs": {
-    "summary": "Resumen",
-    "search": "Buscar"
+    "summary": "Summary",
+    "search": "Search",
+    "monitoring": "Monitoring"
   },
   "measurements": {
     "BloodPressure": "Presión Arterial",
@@ -401,5 +402,12 @@
   "detail_self_care": {
     "title": "Self care detail",
     "owner": "Autor"
-  }
+  },
+  "success request": "solicitud enviada",
+  "document": "Documento",
+  "last measurement": "last measurement",
+  "BloodPressure": "Blood pressure",
+  "search by cedula": "Search by document",
+  "patients": "Patients",
+  "monitoring": "Monitoring"
 }
