Squashed commit of the following:
commit 6b3e91f7119e8da44ef4dbb0a0cd06170d2c2260
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Dec 4 10:12:36 2022 -0500

    fix(verifyPhone): add parseError

commit 5cc6f320a8bf27e351e64d0a33009d370a331838
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun Dec 4 10:01:15 2022 -0500

    fix(app): fixes in the app to better performance and fix text,(0.5.1)(android)

commit 1769c5c0ef9fbfddd24d21df5c2a806555f5a660
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri Nov 25 09:23:39 2022 -0500

    feat(monitoring): add search patient by document

commit 9ccb554ea4423ed490823eb2879b17e76909838c
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Nov 24 15:57:55 2022 -0500

    feat(monitoring): add fallback to user in state loading and no result

commit 8b97c27d07e85ff791d7dd8a3ecc14e733544e13
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Nov 24 11:21:19 2022 -0500

    feat(app): improve style app and components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,16 +87,11 @@
     "show_medicines": "Ver mas"
   },
   "Home/BloodPressure": {
-    "title": "Presión Arterial",
-    "sub_title": "Resumen por %{time}",
     "action_sheet": {
       "take_bp": "Registrar presión arterial",
       "tensiometer": "Validar tensiómetro",
       "reminders": "Recordatorios"
-    },
-    "sys": "Sistólica",
-    "dia": "Diastólica",
-    "today_records_title": "Mediciones de hóy"
+    }
   },
   "BloodPressure/Reminders": {
     "title": "Recordatorios",
@@ -192,17 +187,6 @@
         ]
       }
     ]
-  },
-  "BloodPressure/Measuring": {
-    "title": "Registro de Presión Arterial",
-    "header_title": "Presión arterial",
-    "date": "Fecha",
-    "time": "Hora",
-    "dia": "Diastólica",
-    "sys": "Sistólica",
-    "heart_rate": "Ritmo cardiaco",
-    "add_note": "Agregar una nota",
-    "placeholder_add_note": "¿tienes algo para contar?"
   },
   "notifications": {
     "blood_pressure": {
@@ -404,10 +388,24 @@
     "owner": "Autor"
   },
   "success request": "solicitud enviada",
-  "document": "Documento",
+  "document": "Document",
   "last measurement": "last measurement",
   "BloodPressure": "Blood pressure",
   "search by cedula": "Search by document",
   "patients": "Patients",
-  "monitoring": "Monitoring"
+  "monitoring": "Monitoring",
+  "loading patient": "Loading patients",
+  "No patients for clinical monitoring": "No patients for clinical monitoring",
+  "systolic": "systolic",
+  "diastolic": "diastolic",
+  "today's measurements": "today's measurements",
+  "summary by": "summary by %{time}",
+  "heart rate": "heart rate",
+  "time": "Time",
+  "Add a note": "Add a note",
+  "do you have something to tell?": "do you have something to tell?",
+  "Blood pressure record": "Blood pressure record",
+  "by log in you are agreeing to our": "by log in you are agreeing to our",
+  "privacy policy and terms of service": "privacy policy and terms of service",
+  "log in": "log in"
 }
